--- a/package.json
+++ b/package.json
@@ -1,4 +1,15 @@
 {
+  "name": "employeetrackersql",
+  "version": "1.0.0",
+  "description": "## Description",
+  "main": "index.js",
+  "type": "module",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "inquirer": "^9.2.11"
   }
